@@ -23,6 +23,7 @@
 - add im_sines() to operation db
 - move im_spatres() to almostdeprecated
 - done gtk-doc for other
+- --vips-progress tells you about nthreads, tile size, nlines
 
 30/11/10 started 7.24.0
 - bump for new stable
